# Fundfor

./: .gitignore  README.md  deployed_addresses.json  package-lock.json  package.json  repo_structure.txt
.github/workflows/: ci.yml
contracts/campaign/: Cargo.toml
contracts/campaign/src/: lib.rs  test.rs
contracts/campaign/test_snapshots/test/: test_pledge_fails_if_deadline_passed.1.json  test_refund_fails_when_goal_was_met.1.json  test_refund_succeeds_when_goal_failed.1.json  test_successful_pledge.1.json  test_unauthorized_withdraw_fails.1.json  test_withdraw_fails_if_deadline_not_passed.1.json  test_withdraw_fails_if_goal_not_met.1.json  test_withdraw_succeeds_after_goal_met_and_deadline_passed.1.json
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/factory/test_snapshots/test/: test_create_campaign.1.json
scripts/: deploy.ps1
src/: App.test.tsx  App.tsx  index.css  main.tsx
