[package]
name = "fundloop_campaign"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.6.0"
ed25519-dalek = { version = "=2.2.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "21.6.0", features = ["testutils"] }
ed25519-dalek = { version = "=2.2.0", features = ["std", "rand_core"] }
